--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,20 @@
 {
-    "name": "RPS Game by Maha",
+    "name": "RPS Game by Maha ElFeky",
     "short_name": "RPS Game",
     "start_url": "index.html",
     "scope": "./",
     "icons": [{
-            "src": "rps100.png",
+            "src": "logo100.png",
             "sizes": "100x100",
             "type": "image/png"
         },
         {
-            "src": "rps512.png",
+            "src": "logo480.png",
             "sizes": "512x512",
             "type": "image/png"
         }
     ],
-    "theme_color": "#ffd31d",
-    "background_color": "#333",
+    "theme_color": "#e3e58f",
+    "background_color": "#e3e58f",
     "display": "standalone"
 }
