--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,10 @@
             "src": "logo100.png",
             "sizes": "100x100",
             "type": "image/png"
+        }, {
+            "src": "logo192.png",
+            "sizes": "192x192",
+            "type": "image/png"
         },
         {
             "src": "logo480.png",
@@ -14,7 +18,7 @@
             "type": "image/png"
         }
     ],
-    "theme_color": "#e3e58f",
-    "background_color": "#e3e58f",
+    "theme_color": "#e4e69f",
+    "background_color": "#e4e69f",
     "display": "standalone"
 }
