--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "RPS Game",
     "version": "1.0.0",
     "description": "",
-    "main": "scripts.js",
+    "main": "script.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "sw-precache": "sw-precache"
