--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "RPS Game by Maha ElFeky",
     "short_name": "RPS Game",
     "start_url": "index.html?utm_source=homescreen",
-    "scope": ".",
+    "scope": "/",
     "icons": [{
             "src": "logo100.png",
             "sizes": "100x100",
